<resources>
    <string name="app_name">Video Magnification</string>
    <string name="gaussian_ideal_bandpass">Gaussian ideal bandpass</string>
    <string name="laplacian_ideal_bandpass">Laplacian ideal bandpass</string>
    <string name="laplacian_butterworth">Laplacian Butterworth</string>
    <string name="laplacian_iir">Laplacian IIR</string>
    <string name="magnify_video">Magnify video</string>
    <string name="select_an_algorithm">Select an algorithm</string>
    <string name="magnify">Magnify</string>
    <string name="motion">Motion</string>
    <string name="color">Color</string>
    <string name="next">Next</string>
    <string name="preview">Preview</string>
    <string name="video_preview">Video preview</string>
    <string name="extract">Extract</string>
    <string name="heart_rate">Heart rate</string>
    <string name="respiratory_rate">Respiratory rate</string>
    <string name="open_video_to_start">Open Video to Start</string>
    <string name="video_magnificator_description">The Video Magnificator is a project developed in the Costa Rica Institute of Technology that implements an Android resource optimized version of the MIT CSAIL Eulerian Video Magnification Algorithm, to obtain heart rate or respiratory rate.</string>
    <string name="magnifying">Magnifying...</string>
    <string name="video_file_path">Video file path</string>
    <string name="video_file_path_thumbnail">Video file path for thumbnail</string>
    <string name="spatial_filtering">Spatial filtering</string>
    <string name="null_value">null</string>
    <string name="start_magnification">Start magnification</string>
    <string name="select_parameters">Select parameters</string>
    <string name="alpha">Alpha</string>
    <string name="lambda_c">Lambda C</string>
    <string name="low_frequency">Minimum BPM</string>
    <string name="high_frequency">Maximum BPM</string>
    <string name="sampling_rate">Sampling rate</string>
    <string name="chrom_attenuation">Chrom Attenuation</string>
    <string name="temporal_filtering">Temporal filtering</string>
    <string name="level">Level</string>
    <string name="r2">R2</string>
    <string name="r1">R1</string>
    <string name="conversion_type">Conversion type</string>
    <string name="converting_video">Converting video...</string>
    <string name="why_convert_input">Please wait. The video must be converted to AVI format so that the Video Magnificator can process it.</string>
    <string name="why_convert_output">Please wait. The video is being converted back to MP4.</string>
    <string name="roi">Region of Interest</string>
    <string name="roi_x">X</string>
    <string name="roi_y">Y</string>
    <string name="roi_mark">O</string>
    <string name="convert_output_to_mp4">Convert output to MP4</string>
    <string name="convert_new_video">Magnify new video</string>
    <string name="view_converted_videos">View converted video</string>
</resources>